Make paste + undo behave in QLineEdit as it does in QTextEdit

On the undo/redo stack, it needs to be treated as a separate command

Task-number: QTBUG-5786
Reviewed-by: ogoffart